# my-snap-rdma

./: CODEOWNERS  Makefile.am  configure.ac  configure_dpa_gtest.sh  cross-dpa-clang-riscv64.txt  meson.build  meson_options.txt  mlnx-libsnap.spec.in
.ci/: Dockerfile.centos.stream8  Dockerfile.centos7.9.2009  Dockerfile.debian10  Dockerfile.doca  Dockerfile.dpa_sign  Dockerfile.euleros2sp8aarch64  Dockerfile.euleros2sp9x86  Dockerfile.openeuler.20.03  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  build.sh  build_dev.sh  code_style_check.sh  codespell.sh  codespell_ignore.txt  coverity.sh  job_matrix.yaml  job_matrix_dev.yaml  job_matrix_dpa_sign.yaml  k8s_pod.yaml  proj_jjb.yaml  proj_jjb_dpa_sign.yaml  proj_jjb_pr.yaml  upload.sh  upload_dev.sh
ctrl/: snap_dp_map.c  snap_dp_map.h  snap_poll_groups.c  snap_virtio_adm_spec.h  snap_virtio_blk_ctrl.c  snap_virtio_blk_virtq.c  snap_virtio_common_ctrl.c  snap_virtio_common_ctrl.h  snap_virtio_fs_ctrl.c  snap_virtio_fs_virtq.c  snap_virtio_net_ctrl.c  snap_vq.c  snap_vq_adm.c  snap_vq_adm.h  virtq_common.c  virtq_common.h
dpa/: Makefile.am  dpa.h  dpa_common.c  dpa_dma_test.c  dpa_dma_utils.h  dpa_embed.sh  dpa_extract_sig.sh  dpa_log.h  dpa_nvme.c  dpa_nvme_mp.c  dpa_rt_test_event.c  dpa_rt_test_polling.c  dpa_sign.sh  dpa_sign_prod.sh  dpa_start.c  dpa_virtq_split.c  flexio_dev_dpa_arch.h  flexio_linker.ld  meson.build  snap_dma_compat.h
dpa_app/: dpa_nvme  dpa_nvme.sig  dpa_nvme_mp  dpa_nvme_mp.sig  dpa_virtq_split  dpa_virtq_split.sig  meson.build
fs/: snap_fs_dev.c
rpc/: snap_rpc.py
src/: Makefile.am  meson.build  mlx5_ifc.h  snap.c  snap.h  snap_cross_gvmi.c  snap_cross_gvmi.h  snap_crypto.c  snap_dma.c  snap_dma.h  snap_dma_control.c  snap_dma_dv.c  snap_dma_internal.h  snap_dma_verbs.c  snap_dpa.c  snap_dpa.h  snap_dpa_nvme_common.h  snap_dpa_nvme_mp_common.h  snap_dpa_p2p.c  snap_dpa_p2p.h  snap_dpa_rt.c  snap_dpa_rt.h  snap_dpa_virtq.c  snap_dpa_virtq_common.h  snap_lib_log.c  snap_lib_log.h  snap_macros.h  snap_mr.c  snap_nvme.c  snap_qp.c  snap_sw_virtio_blk.c  snap_umr.c  snap_virtio_blk.c  snap_virtio_common.c  snap_virtio_common.h  snap_virtio_fs.c  snap_virtio_net.c
subprojects/: flexio.wrap  libfiu.wrap  picolibc.wrap
tests/: Makefile.am  meson.build  test_snap_dma.cc  test_snap_dma.h  test_snap_dma_umr_perf.cc  test_snap_dpa.cc  test_snap_qp.cc
